--- a/Day5/style.css
+++ b/Day5/style.css
@@ -1,20 +1,27 @@
 *{
     box-sizing: border-box;
 }
+
+html{
+    font-size: 62.5%; /*= 10px*/
+}
 body{
     padding: 0;
     margin: 0;
 }
 .main-container{
     background-color: #23424A;
-    padding: 5rem;
+    padding: 5rem 10rem; 
+    margin: 0 auto;
 }
 .intro{
-    width: 50%;
+    width: 80%;
     max-width: 750px;
     padding-bottom: 4rem;
+    /* margin: 0 auto; */
 }
 #heading{
+
     color: white;
     font-size: 48px;
     font-family: Roboto Black;
